k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample2
  namespace: staging
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:230951218756:certificate/cbd98edf-8061-4a50-aae0-924fff79ff43
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: demo-nginx2.mmscs.nl
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-sample
              port:
                number: 80
